force-app/main/default/objects/Production_Order__c/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <inlineHelpText>The date assigned to the Order Processor, autocompleted when an order processor is selected</inlineHelpText>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>