force-app/main/default/objects/Production_Order__c/fields/BOM_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>BOM_Due_Date__c</fullName>
    <formula>Current_Schedule_Date__c  - (7 * 24)</formula>
    <inlineHelpText>The Final calculated BOM Release Date (24 Week Mark)</inlineHelpText>
    <label>BOM Due Date</label>
    <type>Date</type>
</CustomField>