force-app/main/default/objects/Production_Order__c/fields/BOM_Processing_Hours__c.field-meta.xml
<CustomField>
    <fullName>BOM_Processing_Hours__c</fullName>
    <label>BOM Processing Hours</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>