force-app/main/default/objects/Production_Order__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hidden Bus Lookup field to get the start date of the first bus in the current schedule date field</description>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Production Orders</relationshipLabel>
    <relationshipName>Production_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>