force-app/main/default/objects/Production_Order__c/fields/Bus_Count__c.field-meta.xml
<CustomField>
    <fullName>Bus_Count__c</fullName>
    <description>Hidden field to calculate the bus count</description>
    <label>Bus Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>