force-app/main/default/objects/Production_Order__c/fields/Buy_Design_Auditors__c.field-meta.xml
<CustomField>
    <fullName>Buy_Design_Auditors__c</fullName>
    <label>Buy Design Auditors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greg Roderick</fullName>
            </value>
            <value>
                <fullName>Kevin Fernandez</fullName>
            </value>
            <value>
                <fullName>Fred Cruz</fullName>
            </value>
            <value>
                <fullName>Joan Seei</fullName>
            </value>
            <value>
                <fullName>Jeff Ralleta</fullName>
            </value>
            <value>
                <fullName>Ron Quebbemanman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>