force-app/main/default/objects/Production_Order__c/fields/Buy_Design_Check__c.field-meta.xml
<CustomField>
    <fullName>Buy_Design_Check__c</fullName>
    <label>Buy Design Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BOM_Processors</valueSetName>
    </valueSet>
</CustomField>