force-app/main/default/objects/Production_Order__c/fields/Buy_Design_Check_Hours__c.field-meta.xml
<CustomField>
    <fullName>Buy_Design_Check_Hours__c</fullName>
    <label>Buy Design Check Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>