force-app/main/default/objects/Production_Order__c/fields/Buy_Design_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Buy_Design_Completion_Date__c</fullName>
    <description>The date when the Buy Design team inspection is completed</description>
    <label>Buy Design Completion Date</label>
    <type>Date</type>
</CustomField>