force-app/main/default/objects/Production_Order__c/fields/Current_Expected_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Expected_Release_Date__c</fullName>
    <label>Current Expected Release Date</label>
    <type>Date</type>
</CustomField>