force-app/main/default/objects/Production_Order__c/fields/Current_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Schedule_Date__c</fullName>
    <description>The Start date of production from the Bus Object( the first Bus in the production Line)</description>
    <formula>Bus__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The start date of the first Bus in this Order</inlineHelpText>
    <label>Current Schedule Date</label>
    <type>Date</type>
</CustomField>