force-app/main/default/objects/Production_Order__c/fields/Final_Design_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Design_Review_Date__c</fullName>
    <label>Final Design Review Date</label>
    <type>Date</type>
</CustomField>