force-app/main/default/objects/Production_Order__c/fields/Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Name__c</fullName>
    <description>Customer Name</description>
    <formula>Sales_Order__r.Account__r.Internal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Name</label>
    <type>Text</type>
</CustomField>