force-app/main/default/objects/Production_Order__c/fields/Material_Undefined__c.field-meta.xml
<CustomField>
    <fullName>Material_Undefined__c</fullName>
    <description>The data obtained from configurator database</description>
    <label>Material Undefined</label>
    <length>25</length>
    <type>Text</type>
</CustomField>