force-app/main/default/objects/Production_Order__c/fields/New_Production_Order__c.field-meta.xml
<CustomField>
    <fullName>New_Production_Order__c</fullName>
    <description>The new production Order calculated once the quantity is set and entered</description>
    <inlineHelpText>The New Production Order calculated with the new Quantity</inlineHelpText>
    <label>New Production Order</label>
    <length>250</length>
    <type>Text</type>
</CustomField>