force-app/main/default/objects/Production_Order__c/fields/New_Quantity__c.field-meta.xml
<CustomField>
    <fullName>New_Quantity__c</fullName>
    <description>The new number of buses that have changed or modified resulting in a new production order</description>
    <inlineHelpText>The quantity of bus connected with the new production order (above)</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>