force-app/main/default/objects/Production_Order__c/fields/Order_Processing_Actual_Hours_Post_SWOR__c.field-meta.xml
<CustomField>
    <fullName>Order_Processing_Actual_Hours_Post_SWOR__c</fullName>
    <label>Order Processing Actual Hours(Post-SWOR)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>