force-app/main/default/objects/Production_Order__c/fields/Order_Processing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Processing_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>