force-app/main/default/objects/Production_Order__c/fields/OSD__c.field-meta.xml
<CustomField>
    <fullName>OSD__c</fullName>
    <inlineHelpText>The Original Start date of the Sales Order</inlineHelpText>
    <label>Original Schedule Date</label>
    <type>Date</type>
</CustomField>