force-app/main/default/objects/Production_Order__c/fields/Production_Order_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Order_Release_Date__c</fullName>
    <description>The Actual release date of the production order ( BOM Actual )</description>
    <label>Production Order Release Date</label>
    <type>Date</type>
</CustomField>