force-app/main/default/objects/Production_Order__c/fields/Production_Order_Split__c.field-meta.xml
<CustomField>
    <fullName>Production_Order_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked once the quantity to split is entered in the screen flow is entered</description>
    <inlineHelpText>Does this order need to split</inlineHelpText>
    <label>Production Order Split</label>
    <type>Checkbox</type>
</CustomField>