force-app/main/default/objects/Production_Order__c/fields/Q__c.field-meta.xml
<CustomField>
    <fullName>Q__c</fullName>
    <description>The Quantity in this production order</description>
    <label>Production Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>