force-app/main/default/objects/Production_Order__c/fields/Quantity_from_OppoSO__c.field-meta.xml
<CustomField>
    <fullName>Quantity_from_OppoSO__c</fullName>
    <description>The quantity related to that Sales Order</description>
    <formula>Sales_Order__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>