force-app/main/default/objects/Production_Order__c/fields/Sales_Due_Out__c.field-meta.xml
<CustomField>
    <fullName>Sales_Due_Out__c</fullName>
    <formula>Bus__r.X27_Weeks_Before_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>27 Week Mark</inlineHelpText>
    <label>Sales Due Out</label>
    <type>Date</type>
</CustomField>