force-app/main/default/objects/Production_Order__c/fields/SWO_Recieved_Date__c.field-meta.xml
<CustomField>
    <fullName>SWO_Recieved_Date__c</fullName>
    <description>The Sales Order Release Date</description>
    <formula>Sales_Order__r.Sales_Order_Release__c</formula>
    <inlineHelpText>The Sales Order Release Date is populated from the Sales Order</inlineHelpText>
    <label>Production Order Pre-Release Date</label>
    <type>Date</type>
</CustomField>