force-app/main/default/objects/Production_Order__c/fields/Total_Actual_Order_Processing_hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Order_Processing_hours__c</fullName>
    <formula>Order_Processing_Actual_Hours_Pre_SWO_R__c + Order_Processing_Actual_Hours_Post_SWOR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Sum of the Order processing hours</inlineHelpText>
    <label>Total Actual Order Processing hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>