force-app/main/default/objects/Production_Order__c/fields/Unmodified_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Unmodified_Quantity__c</fullName>
    <description>The Quantity of buses that do not have any changes and stay as the existing production order</description>
    <inlineHelpText>Then Quantity of Buses in this Production Order after it has Split and will be same as the Production Order quantity of the existing Production Order</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>