force-app/main/default/objects/Production_Order__c/fields/X1st_Check_Audit_complete_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Check_Audit_complete_Date__c</fullName>
    <description>Date the 1st Audit was completed</description>
    <label>1st Check Audit completed Date</label>
    <type>Date</type>
</CustomField>