force-app/main/default/objects/Production_Order__c/fields/X1st_Check_Auditors__c.field-meta.xml
<CustomField>
    <fullName>X1st_Check_Auditors__c</fullName>
    <description>The BOM processors involved in the first Auditing check</description>
    <label>1st Check Auditors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daniel Garcia</fullName>
            </value>
            <value>
                <fullName>Jose Ocampo</fullName>
            </value>
            <value>
                <fullName>Tyler Talavera</fullName>
            </value>
            <value>
                <fullName>Jesus Ruiz</fullName>
            </value>
            <value>
                <fullName>Curtis Silvia</fullName>
            </value>
            <value>
                <fullName>Aaron DeGarcia</fullName>
            </value>
            <value>
                <fullName>Michael Rands</fullName>
            </value>
            <value>
                <fullName>Keith Lynch</fullName>
            </value>
            <value>
                <fullName>Fabian Alarcon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>