force-app/main/default/objects/Production_Order__c/fields/X1st_Check_Completion_Hours__c.field-meta.xml
<CustomField>
    <fullName>X1st_Check_Completion_Hours__c</fullName>
    <description>Time taken to complete the 1st Audit Check</description>
    <label>1st Check Completion Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>