force-app/main/default/objects/Production_Order__c/fields/X2nd_Check_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Check_Audit_Date__c</fullName>
    <description>The date the 2nd Audit was completed</description>
    <label>2nd Check Audit Completed Date</label>
    <type>Date</type>
</CustomField>