force-app/main/default/objects/Production_Order__c/fields/X2nd_Check_Auditors__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Check_Auditors__c</fullName>
    <label>2nd Check Auditors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BOM_Processors</valueSetName>
    </valueSet>
</CustomField>