force-app/main/default/objects/Production_Order__c/fields/X2nd_Check_Completion_hours__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Check_Completion_hours__c</fullName>
    <description>The Time taken to complete the 2nd Audit check</description>
    <label>2nd Check Completion Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>