force-app/main/default/objects/Production_Order__c/recordTypes/Archived_Split_Production_Orders.recordType-meta.xml
<RecordType>
    <fullName>Archived_Split_Production_Orders</fullName>
    <active>true</active>
    <description>The production orders that were split prior to Sales order splits and do not have any buses</description>
    <label>Archived Split Production Orders</label>
</RecordType>