force-app/main/default/objects/Production_Order__c/recordTypes/DefaultProductionOrders.recordType-meta.xml
<RecordType>
    <fullName>DefaultProductionOrders</fullName>
    <active>true</active>
    <description>All the new production Orders will be created and stored here</description>
    <label>Default Production Orders</label>
</RecordType>